css: avoid initial zoom-in on mobile

--- a/themes/minimalConference/static/css/style.css
+++ b/themes/minimalConference/static/css/style.css
@@ -88,7 +88,7 @@ body
 {
   background-color: var(--planet-background);
   color: var(--dark-blue);
-  min-width: 400px;
+  min-width: 300px;
   font-size: 12pt;
   /* max-width: 2000px; */
   margin: auto;
